src/test/resources/public/input/typechecking/pass/passReturn01.jova
class Nested {

  public int fortyTwo() {
    return 42;
  }

  public int nestedIsland() {

    int foo;

    foo = 4 + 8 * 15 * (16 - 23) / fortyTwo();

    return foo + 4 + 8 * 15 * (16 - 23) / fortyTwo();
  }
}
